Fix login for on safari

--- a/public/assets/css/style.less
+++ b/public/assets/css/style.less
@@ -282,8 +282,8 @@ div#footer .follow-btn {
 }
 
 .form-group input {
-  font-size: 20px;
-  line-height: 20px;
+  font-size: 18px;
+  line-height: 28px;
   height: 42px;
 }
 
